# rfetch

./: ;  Cargo.toml  README.md  config.toml
src/: config.rs  displayer.rs  main.rs  stats.rs
