[package]
name = "rfetch"
version = "0.1.0"
authors = ["Kamui <qntmmagic7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
toml = "0.5.8"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.4.3"
