[package]
name = "rfetch"
version = "0.1.0"
authors = ["Kamui <qntmmagic7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
toml = "0.5.8"
bytesize = "1.0.1"
nix = "0.20.0"
chrono = "0.4.19"
isolang = "1.0.0"
humantime = "2.1.0"
minreq = "2.3.1"
colored = "2"
